--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Taviraj&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0deb597c3f.js" crossorigin="anonymous"></script>
     <title>Sunday Market</title>
   </head>
